--- a/app/assets/stylesheets/views/_home.scss
+++ b/app/assets/stylesheets/views/_home.scss
@@ -1,10 +1,28 @@
 body.home {
 
   .new-question-wrapper {
-    padding: $margin 0;
-    a {
-      @extend .btn;
-      font-size: $font-size-large;
+
+    justify-content: center;
+    display: flex;    
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    .new-question-title {
+      
+    }
+
+    .new-question-icon {
+      display: block;
+      a {
+        @extend .btn;
+        width: 40px;
+        height: 40px;
+        border-radius: 50px;
+        background: #90a4ae;
+
+        font-size: $font-size-large;
+        text-align: center;
+      }
     }
   }
 
